# parlatype-libreoffice-extension

./: .gitattributes  .gitignore  Credits  MAINTAINER_README  NEWS  README.md  create_oxt.sh  launchpad-export  launchpad-import  meson.build  meson_options.txt
appdata/: meson.build  org.parlatype.LibreOfficeExtension.metainfo.xml.in  xyz.parlatype.LibreOfficeExtension.metainfo.xml.in
extension/: description.xml.in.in.in  description_translation.xml  i18n_description.sh  meson.build
extension/asr/: jobs.xcu  meson.build
extension/images/: meson.build
extension/options/: ConfigurationData.xcu  ConfigurationSchema.xcs  OptionsDialogHandler.py  OptionsDialogPage.xdl  OptionsDialogRegistry.xcu.in  meson.build
extension/python/: ASR.py  OptionsDialogHandler.py  Parlatype.py  meson.build  parlatype_macros.py
extension/python/components/: ASR.py  OptionsDialogHandler.py  Parlatype.py  meson.build
extension/python/components/pythonpath/: meson.build  parlatype_utils.py  parlatype_win32api.py
extension/python/macros/: Macros.py  meson.build
extension/python/pythonpath/: parlatype_utils.py
extension/toolbar/: ProtocolHandler.xcu  Toolbar.xcu.in  WriterWindowState.xcu.in  meson.build
maint/: README  check-news  make-release  print-translation-status
po/: LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  de.po  en_AU.po  en_CA.po  en_GB.po  enm.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  install_mo_locally.sh  it.po  ja.po  kab.po  ku.po  lt.po  lv.po  meson.build  ms.po  nb_NO.po  nl.po  parlatype_lo.pot  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  (+4 more)
po/its/: lo.its  lo.loc
tests/: meson.build  test_document_link.py  test_parlatype_utils.py  unotest.py
