# Install Extension
install_data(
	[ 'Parlatype.py' ],
	install_dir: join_paths(extension_dir, 'python')
)

install_subdir(
	'pythonpath',
	install_dir: join_paths(extension_dir, 'python')
)

# Install Macros
install_data(
	[ 'parlatype_macros.py' ],
	install_dir: script_dir,
)

install_subdir(
	'pythonpath',
	install_dir: script_dir,
)