install_data(
	[ 'parlatype_utils.py',
	  'parlatype_win32api.py' ],
	install_dir: join_paths(extension_dir, 'python', 'components', 'pythonpath')
)

# Copy pythonpath from Extension to Macros
install_data(
	[ 'parlatype_utils.py',
	  'parlatype_win32api.py' ],
	install_dir: join_paths(script_dir, 'components', 'pythonpath')
)